--- a/pro.css
+++ b/pro.css
@@ -240,14 +240,17 @@ nav ul {
 
 
 .cardb {
-    min-height: 50px;
+    height: 50px;
     background-color:white;
     border: 1px solid grey;
-    padding-bottom: 40px;
-    padding-left: 214px;
+    padding-bottom: 59px;
+    padding-left: 210px;
 
 }
 .cardb a {
- text-align: center;
+ width:20px;
+ height:300px;
+ position: absolute;
+ left: 40px;
+ margin-left:650px;
 }
-{}
