--- a/pro.css
+++ b/pro.css
@@ -157,6 +157,7 @@ nav ul {
         background-color:black;
         position: relative;
         font-size: medium;
+        padding-left: 10px;
         }
     
 .carder3 {
@@ -189,7 +190,7 @@ nav ul {
     width: 300px;
     height:400px;
     border: 2px solid grey;
-    margin-top:50px;
+    margin-top:100px;
     margin-left: 1px;
 }
 
@@ -217,6 +218,7 @@ nav ul {
 
 
 .card-body4 img{
+    vertical-align: middle;
     width: 46px;
     height:50px;
 }
@@ -227,15 +229,15 @@ nav ul {
 
 
 .card-body3 img {
-
+    padding-top: 10px;
+    vertical-align:middle;
     width: 46px;
     height:50px;
 }
 
 
 .card-header3 img {
-  
-
+    vertical-align: middle;
     width: 36px;
     height:30px;
 }
@@ -248,7 +250,7 @@ nav ul {
     height: 50px;
     background-color:white;
     border: 1px solid grey;
-    padding-bottom: 59px;
+    padding-bottom: 75px;
     padding-left: 210px;
 
 }
@@ -261,3 +263,5 @@ nav ul {
  margin-top: 15px;
 
 }
+
+
