--- a/pro.css
+++ b/pro.css
@@ -7,8 +7,6 @@
 
 h1 {
     color: white;
-    margin-left: 150px;
-
 }
 
 nav {
@@ -16,6 +14,13 @@ nav {
     color: white;
     display: flex;
     padding: 1em;
+    margin-bottom: 20px;
+}
+.leftnav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.5em;
 }
 
 nav ul {
@@ -29,6 +34,7 @@ nav ul {
     justify-content: space-between;
     align-items:center;
     margin: 0 auto;
+    gap: 1.5em;
 }
 
 
@@ -36,23 +42,18 @@ nav ul {
 .button {
     width :100px;
     height: 30px;
-    padding-right: 20px;
     background-color:skyblue;
     color: White;
-    margin-right: 200px;
-
 }
 
 
 
 
-.card {
-    width: 400px;
-     height: 300px;
+.usercard {
+    /* width: 400px; */
+    /* min-height: 30px; */
     border: 2px solid grey;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-left: 60px;
+    margin-bottom: 20px;
 }
 
     .card-header {
@@ -60,24 +61,16 @@ nav ul {
         background-color:seagreen;
         position: relative;
         }
-    
-.carder {
-    border-radius: 50%;
-    background-color:white;
-    width:-5px;
-    height: 50px;
-    border: 2px solid white;
-    position: absolute;
-    top: 25px;
-    left: 25px;
 
-}
     .card-body {
     padding: 1.5em;
 }
 .user {
     width: 46px;
     border-radius: 50%;
+    position: absolute;
+    left: 25px;
+    top: 25px;
     
 
 }
@@ -90,48 +83,39 @@ nav ul {
     height: 15px;
 }
 
+main {
+    flex: 2;
+    align-self: flex-start;
+}
 
 
 
 
 
+aside {
+    flex: 1;
+}
 
-.card2 {
-    width: 400px;
-    min-height: 20px;
+.education {
     border: 2px solid grey;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-left: 1px;
-
-    
 }
  
-    .card-header2 {
-        min-height: 50px;
-        background-color:black;
-        }
     
-.carder2 {
-    border-radius: 50%;
-    background-color:white;
-    width:-5px;
-    height: 50px;
-    border: 2px solid white;
-    position: absolute;
-    top: 25px;
-    left: 25px;
-
-}
+    
     .card-body2 {
     padding: 1.5em;
 }
+.dark-header {
+    background-color: black;
+    color: white;
+    padding: 1em;
+}
 
-.card-header2 h1 {
-    font-size: 20px;
-    position:absolute;
-    left: -80px;
-
+.circular {
+border-radius: 50%;
+background-color: white;
+color: black;
+padding: 10px;
 }
 
 
@@ -139,66 +123,19 @@ nav ul {
 
 
 
-
-.card3 {
-    width: 300px;
-    height: 200px;
+.card {
+    
     border: 2px solid grey;
-    margin: 0 auto;
-    margin-top: -530px;
-    margin-left: 600px;
-    margin-bottom: 410px;
-
-    
+    margin-bottom: 20px;
 }
- 
-    .card-header3 {
-        min-height: 30px;
-        background-color:black;
-        position: relative;
-        font-size: medium;
-        padding-left: 10px;
-        }
-    
-.carder3 {
-    border-radius: 50%;
-    background-color:white;
-    width:-5px;
-    height: 50px;
-    border: 2px solid white;
-    position: absolute;
-    top: 25px;
-    left: 25px;
 
-}
     .card-body3 {
     padding: 1.5em;
 }
 
-.card-header3 {
-    padding-right: 2em;
-    padding-right: 10px;
-}
 
 
 
-
-
-
-
-.card4 {
-    width: 300px;
-    height:400px;
-    border: 2px solid grey;
-    margin-top:100px;
-    margin-left: 1px;
-}
-
-
-.card-header4 {
-        min-height: 40px;
-        background-color:black;
-        }
     
 .carder4 {
     border-radius: 50%;
@@ -206,10 +143,6 @@ nav ul {
     width:-5px;
     height: 50px;
     border: 2px solid white;
-    position: absolute;
-    top: 25px;
-    left: 25px;
-    
 
 }
     .card-body3 {
@@ -222,10 +155,7 @@ nav ul {
     width: 46px;
     height:50px;
 }
-.card-header4 h4{
-    font-size: 20px;
-    color:white;
-}
+
 
 
 .card-body3 img {
@@ -236,32 +166,15 @@ nav ul {
 }
 
 
-.card-header3 img {
-    vertical-align: middle;
-    width: 36px;
-    height:30px;
-}
-.card-header3 p {
-    color: white;
-}
+
 
 
 .cardb {
     height: 50px;
     background-color:white;
     border: 1px solid grey;
-    padding-bottom: 75px;
-    padding-left: 210px;
-
+    padding: 10px;
 }
-.cardb a {
- width:200px;
- height:400px;
- position: absolute;
- left: 40px;
- margin-left:650px;
- margin-top: 15px;
 
-}
 
 
